test/ScannerAndParserTests/pass/Pass5_LineNumber.java
/*
 *
 */
class A {
/*
 *
 */
	void f() {
		int
		   	x 
			= 
			null;
		int x = 
			5
			*
			2
			+
			null
			/
			3
			&&
			null;
		A x = null;
		{
			int a = 5;
			{
				int b = 5;
				{
					int c = 5;
				}
				{
					int d = 5;
				}
			}
		}
	}
}
class NULL {}
class A {}
