test/ScannerAndParserTests/fail/Fail33.java
class name {
	public static void testStatementAndExpression() {
		int x = 5;
		int x1 = (5 + 4);
		int x2 = (5+4)/3;
		int x3 = (((5+4)));
		int x4 = (5+4)*2/53523+21+;
	}
}
